--- a/src/sel2gpf/CMakeLists.txt
+++ b/src/sel2gpf/CMakeLists.txt
@@ -1,9 +1,9 @@
 # This file is part of SelnexGPF.
 #
 # SelnexGPF is free software: you can redistribute it and/or modify it under
-# the terms of the GNU Lesser General Public License as published by the Free
-# Software Foundation, either version 3 of the License, or (at your option)
-# any later version.
+# the terms of the GNU General Public License as published by the Free Software
+# Foundation, either version 3 of the License, or (at your option) any later
+# version.
 #
 # This program is distributed in the hope that it will be useful,but WITHOUT
 # ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -18,6 +18,14 @@
 #   2013-2014 Alexander Haase <alexander.haase@rwth-aachen.de>
 #
 
+# set C99 standard
+set (CMAKE_C_FLAGS "-std=c99")
 
-# recurse into subdirectories
-add_subdirectory(sel2gpf)
+# include selnexgpf library header
+include_directories("${PROJECT_SOURCE_DIR}/src/libdecode")
+
+add_executable (sel2gpf
+	sel2gpf.c
+)
+
+target_link_libraries(sel2gpf selnexgpf)
